--- a/notebooks/data preprocessing.ipynb
+++ b/notebooks/data preprocessing.ipynb
@@ -2,15 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "import warnings\n",
     "import re\n",
     "import numpy as np\n",
     "warnings.filterwarnings(\"ignore\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "create folder: ../data/curated/external/api\n",
+      "create folder: ../data/curated/external/crime\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create the folders for data\n",
+    "base_folder = \"../data/\"\n",
+    "data_folders = [\n",
+    "    \"raw/property\",\n",
+    "    \"raw/external/SA2\",\n",
+    "    \"raw/external/API\",\n",
+    "    'raw/external/crime',\n",
+    "    \"curated/property\",\n",
+    "    \"curated/external/sa2\",\n",
+    "    \"curated/external/api\",\n",
+    "    \"curated/external/crime\",\n",
+    "]\n",
+    "for folder in data_folders:\n",
+    "    path = os.path.join(base_folder,folder)\n",
+    "    if not os.path.exists (path):\n",
+    "        os.makedirs(path)\n",
+    "        print(f\"create folder: {path}\")\n"
    ]
   },
   {
