--- a/notebooks/download_cbd_locations.ipynb
+++ b/notebooks/download_cbd_locations.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CBD saved: D:\\STUDYfile\\ads2\\111ads\\project-2-group-real-estate-industry-project-35\\data\\raw\\external\\melbourne_cbd_coordinates.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import csv\n",
@@ -53,7 +61,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -67,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
