--- a/notebooks/download/download_library_location.ipynb
+++ b/notebooks/download/download_library_location.ipynb
@@ -52,7 +52,7 @@
     "libraries_df = pd.DataFrame(libraries)\n",
     "\n",
     "# Save the result to a CSV file\n",
-    "output_file_path = '/home/yanbinh/data/victoria_libraries.csv'\n",
+    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_libraries.csv'\n",
     "libraries_df.to_csv(output_file_path, index=False)\n",
     "\n",
     "print(f\"library saved: {output_file_path}\")"
