--- a/notebooks/API/4/calculate_min_station_distance4.ipynb
+++ b/notebooks/API/4/calculate_min_station_distance4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "房屋和车站的GeoJSON文件已生成\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
@@ -67,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "结果已保存到 ../data_4/api/results/closest_station_distance_final_4.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geojson\n",
     "import openrouteservice\n",
@@ -145,7 +129,7 @@
     "                    })\n",
     "        except Exception as e:\n",
     "            print(f\"Error calculating distance matrix: {e}\")\n",
-    "        time.sleep(1)  # 防止触发速率限制\n",
+    "        time.sleep(1)  \n",
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
