--- a/notebooks/API/3/convert_address.ipynb
+++ b/notebooks/API/3/convert_address.ipynb
@@ -10,13 +10,13 @@
     "from geopy.geocoders import Nominatim\n",
     "from time import sleep\n",
     "\n",
-    "# 初始化 Nominatim 地理编码器\n",
+    "# Initialize Nominatim geocoder\n",
     "geolocator = Nominatim(user_agent=\"my_geocoder\", timeout=10)\n",
     "\n",
-    "# 读取你的 CSV 文件\n",
+    "# Read your CSV file\n",
     "data = pd.read_csv(\"../data/curated/property/property 3.csv\")\n",
     "\n",
-    "# 创建一个函数来处理地址地理编码，并处理重试\n",
+    "# Create a function to handle address geocoding and retry on failure\n",
     "def geocode_address(address, retries=3):\n",
     "    for attempt in range(retries):\n",
     "        try:\n",
@@ -27,42 +27,42 @@
     "                return None, None\n",
     "        except Exception as e:\n",
     "            print(f\"Error geocoding {address}: {e}, retrying ({attempt+1}/{retries})...\")\n",
-    "            sleep(2)  # 在每次重试之间等待几秒\n",
+    "            sleep(2)  # Wait a few seconds between retries\n",
     "    return None, None\n",
     "\n",
-    "# 批次处理函数\n",
+    "# Batch processing function\n",
     "def batch_geocode(data, batch_size=100, sleep_time=1):\n",
     "    latitudes = []\n",
     "    longitudes = []\n",
     "    \n",
-    "    # 按照批次处理数据\n",
+    "    # Process data in batches\n",
     "    for i in range(0, len(data), batch_size):\n",
     "        batch = data[i:i+batch_size]\n",
-    "        print(f\"正在处理第 {i // batch_size + 1} 批...\")\n",
+    "        print(f\"Processing batch {i // batch_size + 1}...\")\n",
     "        \n",
     "        for address in batch['address']:\n",
     "            lat, lon = geocode_address(address)\n",
     "            latitudes.append(lat)\n",
     "            longitudes.append(lon)\n",
-    "            sleep(sleep_time)  # 每个请求后暂停，遵守 Nominatim 的速率限制\n",
+    "            sleep(sleep_time)  # Pause after each request to comply with Nominatim rate limits\n",
     "        \n",
-    "        print(f\"第 {i // batch_size + 1} 批处理完成。\")\n",
+    "        print(f\"Batch {i // batch_size + 1} completed.\")\n",
     "    \n",
     "    return latitudes, longitudes\n",
     "\n",
-    "# 执行批次处理，假设每批次处理 100 条记录\n",
-    "batch_size = 100  # 每批处理 100 条地址\n",
+    "# Execute batch processing, assuming each batch processes 100 records\n",
+    "batch_size = 100  # Process 100 addresses per batch\n",
     "latitudes, longitudes = batch_geocode(data, batch_size=batch_size, sleep_time=2)\n",
     "\n",
-    "# 将地理编码结果加入到数据集中\n",
+    "# Add geocoding results to the dataset\n",
     "data['latitude'] = latitudes\n",
     "data['longitude'] = longitudes\n",
     "\n",
-    "# 保存所有处理结果到同一个 CSV 文件，无论是否成功\n",
-    "csv_output_path = '../data/curated/property/property_addresses_to_lat_lng.csv'\n",
+    "# Save all processed results to a single CSV file, regardless of success\n",
+    "csv_output_path = '../data/curated/property/property3_addresses_to_lat_lng.csv'\n",
     "data.to_csv(csv_output_path, index=False)\n",
     "\n",
-    "print(f\"所有地址数据已保存到 {csv_output_path}\")\n"
+    "print(f\"All address data has been saved to {csv_output_path}\")"
    ]
   },
   {
@@ -76,13 +76,13 @@
     "import re\n",
     "from time import sleep\n",
     "\n",
-    "# 初始化 Nominatim 地理编码器\n",
+    "# Initialize the Nominatim geocoder\n",
     "geolocator = Nominatim(user_agent=\"my_geocoder\", timeout=10)\n",
     "\n",
-    "# 读取 CSV 文件\n",
-    "data = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng.csv')\n",
+    "# Read the CSV file\n",
+    "data = pd.read_csv('../data/curated/property/property3_addresses_to_lat_lng.csv')\n",
     "\n",
-    "# 创建一个函数来处理地址地理编码\n",
+    "# Create a function to handle address geocoding\n",
     "def geocode_address(address, retries=3):\n",
     "    for attempt in range(retries):\n",
     "        try:\n",
@@ -93,29 +93,30 @@
     "                return None, None\n",
     "        except Exception as e:\n",
     "            print(f\"Error geocoding {address}: {e}, retrying ({attempt+1}/{retries})...\")\n",
-    "            sleep(2)  # 每次重试间隔2秒\n",
+    "            sleep(2)  # Wait 2 seconds between retries\n",
     "    return None, None\n",
     "\n",
-    "# 去除地址中的数字和符号\n",
+    "# Remove numbers and symbols from the address\n",
     "def remove_numbers(address):\n",
     "    return re.sub(r'[^a-zA-Z\\s]', '', address).strip()\n",
     "\n",
-    "# 筛选出没有经纬度的地址\n",
+    "# Filter out addresses with missing latitude or longitude\n",
     "no_lat_lng = data[data['latitude'].isna() | data['longitude'].isna()].copy()\n",
     "\n",
-    "# 去除这些地址中的数字和符号\n",
+    "# Clean these addresses by removing numbers and symbols\n",
     "no_lat_lng['cleaned_address'] = no_lat_lng['address'].apply(remove_numbers)\n",
     "\n",
-    "# 对处理后的地址进行地理编码\n",
+    "# Geocode the cleaned addresses\n",
     "no_lat_lng['latitude'], no_lat_lng['longitude'] = zip(*no_lat_lng['cleaned_address'].apply(geocode_address))\n",
     "\n",
-    "# 将更新的结果保存到原始数据中\n",
+    "# Update the original data with the new latitudes and longitudes\n",
     "data.update(no_lat_lng[['latitude', 'longitude']])\n",
-    "# 保存所有结果到 CSV 文件\n",
-    "csv_output_path = '../data/curated/property/property_addresses_to_lat_lng.csv'\n",
+    "\n",
+    "# Save all results to the CSV file\n",
+    "csv_output_path = '../data/curated/property/property3_addresses_to_lat_lng.csv'\n",
     "data.to_csv(csv_output_path, index=False)\n",
     "\n",
-    "print(f\"所有地址数据已保存到 {csv_output_path}\")"
+    "print(f\"All address data has been saved to {csv_output_path}\")"
    ]
   },
   {
@@ -126,18 +127,17 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# 加载你的数据集\n",
-    "file_path = '../data/curated/property/property_addresses_to_lat_lng.csv'  # 替换为你的文件路径\n",
+    "file_path = '../data/curated/property/property3_addresses_to_lat_lng.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
-    "# 删除包含空值的行（即 latitude 或 longitude 为 NaN 的行）\n",
+    "# Remove rows with missing values (i.e., latitude or longitude as NaN)\n",
     "cleaned_data = data.dropna(subset=['latitude', 'longitude'])\n",
     "\n",
-    "# 保存清理后的数据到新的 CSV 文件\n",
-    "output_file_path = '../data/curated/property/property_addresses_to_lat_lng.csv'  # 替换为你想要保存的路径\n",
+    "# Save the cleaned data to a new CSV file\n",
+    "output_file_path = '../data/curated/property/property3_addresses_to_lat_lng.csv'\n",
     "cleaned_data.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(\"已删除经纬度为空的行，清理后的数据已保存。\")\n"
+    "print(\"Rows with missing latitude or longitude have been removed, and the cleaned data has been saved.\")"
    ]
   }
  ],
