--- a/notebooks/download/crime_count.ipynb
+++ b/notebooks/download/crime_count.ipynb
@@ -21,7 +21,7 @@
     "# URL for saving file\n",
     "url = 'https://files.crimestatistics.vic.gov.au/2024-09/Data_Tables_LGA_Recorded_Offences_Year_Ending_June_2024.xlsx'\n",
     "# Save path to file\n",
-    "save_path = os.path.expanduser(\"~/Downloads/crime_count_21_22_23.xlsx\")\n",
+    "save_path = os.path.expanduser(\"~/Documents/GitHub/MAST30034_Python/project-2-group-real-estate-industry-project-35/data/raw/crime_count_21_22_23.xlsx\")\n",
     "\n",
     "# Download file\n",
     "response = requests.get(url)\n",
@@ -41,10 +41,10 @@
     "postcode_crime_count_by_year.columns = ['postcode', '2021crime', '2022crime', '2023crime']\n",
     "\n",
     "# Save the result to a new CSV file\n",
-    "output_path = os.path.expanduser(\"~/Downloads/crime_by_year.csv\")\n",
+    "output_path = os.path.expanduser(\"~/Documents/GitHub/MAST30034_Python/project-2-group-real-estate-industry-project-35/data/curated/crime_by_year.csv\")\n",
     "postcode_crime_count_by_year.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"Data has been saved to {output_path}\")\n"
+    "print(f\"Data has been saved to {output_path}\")"
    ]
   }
  ],
