--- a/notebooks/API/1/calculate_min_school_distance.ipynb
+++ b/notebooks/API/1/calculate_min_school_distance.ipynb
@@ -11,7 +11,7 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# Read the school CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\VIC_School_Location.csv', encoding='ISO-8859-1')\n",
+    "market_df = pd.read_csv('../data/raw/external/VIC_School_Location.csv', encoding='ISO-8859-1')\n",
     "market_df = market_df.dropna(subset=['X', 'Y'])\n",
     "\n",
     "# Function to create GeoJSON Features\n",
@@ -28,7 +28,7 @@
     "gym_feature_collection = FeatureCollection(gym_features)\n",
     "\n",
     "# Save schools as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\schools_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/raw/external/API/1/schools_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(gym_feature_collection, f)\n",
@@ -47,14 +47,14 @@
     "import numpy as np\n",
     "\n",
     "# Read the CSV file\n",
-    "file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv'\n",
+    "file_path = '../data/curated/property/property_addresses_to_lat_lng.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Split the data into 4 parts\n",
     "split_data = np.array_split(data, 4)\n",
     "\n",
     "# Specify the destination folder to save the files\n",
-    "destination_folder = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property'  # Specify the path where you want to save the files\n",
+    "destination_folder = '../data/curated/property'\n",
     "\n",
     "# Create the destination folder if it doesn't exist\n",
     "if not os.path.exists(destination_folder):\n",
@@ -79,7 +79,7 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# Read the CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part_1.csv')\n",
+    "market_df = pd.read_csv('../data/curated/property/part_1.csv')\n",
     "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "# Function to create GeoJSON Features\n",
@@ -96,7 +96,7 @@
     "gym_feature_collection = FeatureCollection(gym_features)\n",
     "\n",
     "# Save the data as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part1_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/curated/property/part1_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(gym_feature_collection, f)\n",
@@ -115,7 +115,7 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# Read the CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part_2.csv')\n",
+    "market_df = pd.read_csv('../data/curated/property/part_2.csv')\n",
     "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "# Function to create GeoJSON Features\n",
@@ -132,7 +132,7 @@
     "gym_feature_collection = FeatureCollection(gym_features)\n",
     "\n",
     "# Save the data as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part2_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/curated/property/part2_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(gym_feature_collection, f)\n",
@@ -151,7 +151,7 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# Read the CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part_3.csv')\n",
+    "market_df = pd.read_csv('../data/curated/property/part_3.csv')\n",
     "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "# Function to create GeoJSON Features\n",
@@ -168,7 +168,7 @@
     "gym_feature_collection = FeatureCollection(gym_features)\n",
     "\n",
     "# Save the data as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part3_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/curated/property/part3_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(gym_feature_collection, f)\n",
@@ -190,10 +190,10 @@
     "api_key = '5b3ce3597851110001cf62483b1a72a766444e06858b2f513c1a4ac6'\n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part1_geojson.geojson', 'r') as f:\n",
+    "with open('../data/curated/property/part1_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\schools_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/schools_geojson.geojson', 'r') as f:\n",
     "    school_geojson = geojson.load(f)\n",
     "\n",
     "def extract_coordinates(features):\n",
@@ -247,7 +247,7 @@
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, school_coords, batch_size=1)\n",
     "\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\closest_school_distance_part_1.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_school_distance_part_1.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"saved {output_path}\")"
@@ -266,10 +266,10 @@
     "\n",
     "api_key = '5b3ce3597851110001cf6248932b1acdd31d4250b8ae5c18277e8cad' \n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part2_geojson.geojson', 'r') as f:\n",
+    "with open('../data/curated/property/part2_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\schools_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/schools_geojson.geojson', 'r') as f:\n",
     "    school_geojson = geojson.load(f)\n",
     "\n",
     "def extract_coordinates(features):\n",
@@ -323,7 +323,7 @@
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, school_coords, batch_size=1)\n",
     "\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\closest_school_distance_part_2.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_school_distance_part_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"saved {output_path}\")"
@@ -343,10 +343,10 @@
     "api_key = '5b3ce3597851110001cf6248932b1acdd31d4250b8ae5c18277e8cad' \n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part3_geojson.geojson', 'r') as f:\n",
+    "with open('../data/curated/property/part3_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\schools_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/schools_geojson.geojson', 'r') as f:\n",
     "    school_geojson = geojson.load(f)\n",
     "\n",
     "def extract_coordinates(features):\n",
@@ -401,7 +401,7 @@
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, school_coords, batch_size=1)\n",
     "\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\closest_school_distance_part_3.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_school_distance_part_3.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"saved {output_path}\")"
@@ -417,7 +417,7 @@
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part_4.csv')\n",
+    "market_df = pd.read_csv('../data/curated/property/part_4.csv')\n",
     "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "\n",
@@ -433,7 +433,7 @@
     "gym_feature_collection = FeatureCollection(gym_features)\n",
     "\n",
     "\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\part4_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/raw/external/API/1/part4_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(gym_feature_collection, f)\n",
@@ -456,10 +456,10 @@
     "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30' \n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\part4_geojson.geojson', 'r') as f:\n",
+    "with open('../data/curated/property/part4_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\schools_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/schools_geojson.geojson', 'r') as f:\n",
     "    school_geojson = geojson.load(f)\n",
     "\n",
     "def extract_coordinates(features):\n",
@@ -513,7 +513,7 @@
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, school_coords, batch_size=1)\n",
     "\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\closest_school_distance_part_4.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_school_distance_part_4.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"saved {output_path}\")"
