--- a/notebooks/API/1/calculate_min_station_distance.ipynb
+++ b/notebooks/API/1/calculate_min_station_distance.ipynb
@@ -11,8 +11,8 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# Read the house and station CSV files\n",
-    "houses_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv')\n",
-    "stations_df = pd.read_csv(\"D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\\\victoria_metro_stations.csv\")\n",
+    "houses_df = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng.csv')\n",
+    "stations_df = pd.read_csv(\"../data/curated/property/victoria_metro_stations.csv\")\n",
     "\n",
     "# Drop rows with missing longitude and latitude\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
@@ -36,8 +36,8 @@
     "station_feature_collection = FeatureCollection(station_features)\n",
     "\n",
     "# Save house and station data as separate GeoJSON files\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\property_geojson.geojson'\n",
-    "stations_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\vic_metro_stations_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/raw/external/API/1/property_geojson.geojson'\n",
+    "stations_geojson_output_path = '../data/raw/external/API/1/vic_metro_stations_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(house_feature_collection, f)\n",
@@ -64,10 +64,10 @@
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
     "# Read GeoJSON files\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\property_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\vic_metro_stations_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/vic_metro_stations_geojson.geojson', 'r') as f:\n",
     "    stations_geojson = geojson.load(f)\n",
     "\n",
     "# Extract latitude and longitude\n",
@@ -128,7 +128,7 @@
     "\n",
     "# Save the shortest distance results to a CSV file\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\closest_station_distance_final_1.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_station_distance_final_1.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"Results have been saved to {output_path}\")\n"
