--- a/notebooks/download/download_cbd_locations.ipynb
+++ b/notebooks/download/download_cbd_locations.ipynb
@@ -41,7 +41,7 @@
     "        melbourne_cbd = data[0]\n",
     "        lat = melbourne_cbd['lat']\n",
     "        lon = melbourne_cbd['lon']\n",
-    "        save_path = \"D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\melbourne_cbd_coordinates.csv\"\n",
+    "        save_path = \"../data/raw/external/melbourne_cbd_coordinates.csv\"\n",
     "\n",
     "        os.makedirs(os.path.dirname(save_path), exist_ok=True)\n",
     "\n",
