--- a/notebooks/download/download_supermarket_locations.ipynb
+++ b/notebooks/download/download_supermarket_locations.ipynb
@@ -52,7 +52,7 @@
     "supermarkets_df = pd.DataFrame(supermarkets)\n",
     "\n",
     "# Save the result to a CSV file\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_supermarkets.csv'\n",
+    "output_file_path = '../data/raw/external/victoria_supermarkets.csv'\n",
     "supermarkets_df.to_csv(output_file_path, index=False)\n",
     "\n",
     "print(f\"Supermarket location data in Victoria has been saved to {output_file_path}\")\n"
