--- a/notebooks/API/1/calculate_min_police_stations_distance.ipynb
+++ b/notebooks/API/1/calculate_min_police_stations_distance.ipynb
@@ -11,7 +11,7 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# Read the police station CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_police_stations.csv')\n",
+    "market_df = pd.read_csv('../data/raw/external/victoria_police_stations.csv')\n",
     "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "# Function to create GeoJSON Features\n",
@@ -28,7 +28,7 @@
     "gym_feature_collection = FeatureCollection(gym_features)\n",
     "\n",
     "# Save police station data as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\police_stations_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/raw/external/API/1/police_stations_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(gym_feature_collection, f)\n",
@@ -52,10 +52,10 @@
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
     "# Read GeoJSON files\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\property_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\police_stations_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/police_stations_geojson.geojson', 'r') as f:\n",
     "    police_geojson = geojson.load(f)\n",
     "\n",
     "# Extract latitude and longitude\n",
@@ -116,7 +116,7 @@
     "\n",
     "# Save the shortest distance results to a CSV file\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\closest_police_distance_final_1.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_police_distance_final_1.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"Results have been saved to {output_path}\")\n"
