--- a/notebooks/download/download_gym_locations.ipynb
+++ b/notebooks/download/download_gym_locations.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "gyms_df = pd.DataFrame(gyms)\n",
     "\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_gyms.csv'\n",
+    "output_file_path = '../data/raw/external/victoria_gyms.csv'\n",
     "gyms_df.to_csv(output_file_path, index=False)\n",
     "\n",
     "print(f\"gym saved: {output_file_path}\")\n"
