--- a/notebooks/download/downloda_police_stations.ipynb
+++ b/notebooks/download/downloda_police_stations.ipynb
@@ -52,7 +52,7 @@
     "police_stations_df = pd.DataFrame(police_stations)\n",
     "\n",
     "# Save the result to a CSV file\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_police_stations.csv'\n",
+    "output_file_path = '../data/raw/external/victoria_police_stations.csv'\n",
     "police_stations_df.to_csv(output_file_path, index=False)\n",
     "\n",
     "print(f\"Police station location data in Victoria has been saved as a CSV file: {output_file_path}\")\n"
