--- a/notebooks/merge_data/property4_merge.ipynb
+++ b/notebooks/merge_data/property4_merge.ipynb
@@ -643,6 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### drop useless columns\n",
     "merge_df_all = merge_df_5.drop_duplicates('address')\n",
     "merge_df_all = merge_df_all.drop(['Unnamed: 0_x','Unnamed: 0_y','SA2 code','SA2 name','Unnamed: 0'],axis=1)\n",
     "merge_df_all = merge_df_all.dropna()"
